# GMBuild

./: CMakeLists.txt  doc.md
src/: main.c
src/core/: core_doc.md  gmb_array.c  gmb_array.h  gmb_def.h  gmb_hash.h  gmb_string.c  gmb_string.h  gmb_vector.c  gmb_vector.h  gmbdef.h
